fix: improve headers on mobile

--- a/assets/less/site.less
+++ b/assets/less/site.less
@@ -302,6 +302,14 @@ ol.slick-dots {
     h1 {
       font-size: 60px;
     }
+
+    @media (max-width: 767px) {
+      h1 {
+        font-size: 40px;
+        line-height: 1.2;
+      }
+    }
+  
   }
 }
 
@@ -324,6 +332,7 @@ ol.slick-dots {
     line-height: 1;
     border: none;
   }
+
   p {
     margin-top: 15px;
     margin-bottom: 30px;
